# Voxelite_Utils

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
src/Voxelite/Util/: Color16.hpp  Hex.hpp  ICodename.cpp  ICodename.hpp  Uuid.cpp  Uuid.hpp  Version.hpp
tests/: CMakeLists.txt
tests/dec2hex/: CMakeLists.txt  main.cpp
tests/does_it_run/: CMakeLists.txt  main.cpp
tests/hex2dec/: CMakeLists.txt  main.cpp
tests/uuid/: CMakeLists.txt  main.cpp
tests/version/: CMakeLists.txt  main.cpp
